[package]
name = "voltos-interface"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
rtnetlink = "0.14"
slotmap = "1.0"
indexmap = "2"
nix = { version = "0.29", features = ["sched", "mount", "net", "ioctl"] }
thiserror = "1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
